# chat-with-X-backend-py

./: .gitignore  .pylintrc  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/: metadata.json
dumb/: ingest.py
dumb/retrieval_graph/researcher_graph/: state.py
notebooks/: graph.ipynb  ingest.ipynb  researcher_graph.ipynb  retrieval_graph.ipynb
src/: configuration.py  embeddings.py  ingest.py  prompts.py  utils.py  vector_store.py  vectorstore.py
src/agent/: graph.py  state.py
src/agent/researcher/: graph.py  state.py
src/agent/researcher/tools/: queries.py  retriever.py  websearch.py
src/ingest/: doc_loader.py  ingest.py  record_manager.py
src/ingest/parsers/: basic_recursive_url.py  basic_sitemap.py  langchain_recursive_url.py  langgraph_recursive_url.py  langsmith_recursive_url.py
src/retrieval_graph/: prompts.py
src/retrieval_graph/researcher_graph/: graph.py
src/test/: config_test.py
