[project]
name = "chat-with-x-backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "rich>=14.1.0",
    "jupyter>=1.1.1",
]
